--- a/ict-fow.html
+++ b/ict-fow.html
@@ -41,11 +41,12 @@
         <article class="answer">
             <h1>ICT Field of Work</h1>
             <h2>Full Stack Developer</h2>
-            <p>Profesi yang menguasai segala bidang dalam development sebuah aplikasi.
-            Mengerti back-end dan front-end, dan juga perlu mengetahui ilmu lain seperti managemen server,
-            database, API, websocket, dan design UI/UX. Skill yang diperlukan adalah networking, servers,
-            database, qualitative analysis, UX design, security, dan bekerja dengan keperluan customer.
-            Perusahaan yang membutuhkan profesi ini adalah Walmart, IBM, SAP, Paypal.</p>
+            <p>Profession that masters all fields in the development of an application.
+                Understand back-end and front-end, and also need to know other knowledge such as
+                server management, database, API, websocket, and UI/UX design.
+                Required skills are networking, servers, database, qualitative analysis, UX design,
+                security, and working with customer requirements.
+                Companies that need this profession are Walmart, IBM, SAP, Paypal.</p>
         </article>
     </main>
     <footer>
