--- a/dashboard.html
+++ b/dashboard.html
@@ -42,7 +42,7 @@
                         <article class="nbsa-study-cards-item">
                             <article class="nbsa-study-cards-info">
                                 <h2>NBSA Boundary</h2>
-                                <section class="nbsa-study-cards-progress"></div>
+                                <section class="nbsa-study-cards-progress"></section>
                             </article>
                             <h2 class="nbsa-study-class-percentage">0</h2>
                         </article>
@@ -68,7 +68,7 @@
                                 <div class="study-cards-progress"></div>
                             </article>
                             <h2 class="study-class-percentage">0</h2>
-                        </diarticlev>
+                        </article>
                     </section>
                 </article>
                 <article class="study-quartile">
