--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <p>Why did I choose the HBO-ICT? What motivates me?
                 <br>Before that, you can see my profile first.</p>
                 <a href="profile.html" class="user-button-text">Look at my profile</a>
-                <a href="profile.html" class="user-icon"><i class="fa fa-user"></i> ></a>
+                <a href="profile.html" class="user-icon"><i class="fa fa-user"></i></a>
             </article>
             <figure> 
                 <img src="resources/home-image-1.png" class="index-main-image-container" alt="HBO ICT in HZ University of Applied Sciences">
