--- a/dashboard.html
+++ b/dashboard.html
@@ -15,7 +15,7 @@
 <body class="dashboard-page">
     <nav>
         <figure class="main-logo">
-            <a href="index.html"><img src="resources/main-logo.png"></a>
+            <a href="index.html"><img src="resources/main-logo.png" alt="Alessandro Ryo logo"></a>
         </figure>
         <ul>
             <li><a href="index.html">Home</a></li>
