--- a/ict-fow.html
+++ b/ict-fow.html
@@ -15,7 +15,7 @@
 <body>
     <nav>
         <figure class="main-logo">
-            <img src="resources/main-logo.png" alt="Alessandro Ryo logo">
+            <a href="index.html"><img src="resources/main-logo.png" alt="Alessandro Ryo logo"></a>
         </figure>
         <ul>
             <li><a href="index.html">Home</a></li>
