--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <nav>
         <figure class="main-logo">
-            <img src="resources/main-logo.png" alt="Alessandro Ryo logo">
+            <a href="index.html"><img src="resources/main-logo.png" alt="Alessandro Ryo logo"></a>
         </figure>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -41,7 +41,7 @@
                 <a href="profile.html" class="user-icon"><i class="fa fa-user"></i></a>
             </article>
             <figure> 
-                <img src="resources/home-image-1.png" class="index-main-image-container" alt="HBO ICT in HZ University of Applied Sciences">
+                <img src="resources/home-image-1.png" class="index-main-image-container" alt="HBO ICT in HZ University of Applied Sciences Alessandro Ryo">
             </figure>
     </header>
     <main>
@@ -58,15 +58,24 @@
             <section class="index-row">
                 <article class="index-col">
                     <h3>Passion</h3>
-                    <p>Choosing HBO-ICT is my life choice and my passion is in this major.</p>
+                    <p>Choosing HBO-ICT is my life choice and my passion is in this major.
+                    I also had the opportunity to be a head of IT division in the student council,
+                    where I created a website for the student council, became a social media manager,
+                    and had several other tasks related to the ICT world.
+                    </p>
                 </article>
                 <article class="index-col">
                     <h3>Successful Figure</h3>
-                    <p>I see many examples of successful figures because of their expertise in the ICT world.</p>
+                    <p>I see many examples of successful figures because of their expertise in the ICT world.
+                    For examples, Bill Gates, Mark Zuckerberg, Larry Page, and many more.
+                    From there I learned a lot about the IT world and its struggles.
+                    </p>
                 </article>
                 <article class="index-col">
                     <h3>Parent Experience</h3>
-                    <p>My father have worked in IT for more than 20 years and I am often told about my father day-to-day experiences working in IT.</p>
+                    <p>My father have worked in IT for more than 20 years and I am often told about my father day-to-day experiences working in IT.
+                    I learned a lot of hardships at work as well as the joys that come with it.
+                    </p>
                 </article>
             </section>
         </section>
