--- a/profile.html
+++ b/profile.html
@@ -15,7 +15,7 @@
 <body>
     <nav>
         <figure class="main-logo">
-            <a href="index.html"><img src="resources/main-logo.png"></a>
+            <a href="index.html"><img src="resources/main-logo.png" alt="Alessandro Ryo logo"></a>
         </figure>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -33,7 +33,7 @@
     </nav>
     <header class="profile-header">
         <figure> 
-            <img src="resources/profile-face.png" class="profile-main-image-container">
+            <img src="resources/profile-face.png" class="profile-main-image-container" alt="Alessandro Ryo Profile Picture">
         </figure>
         <article class="profile-main-text-container">
             <h1>ALESSANDRO RYO</h1>
@@ -62,7 +62,7 @@
             <article div class="profile-row">
                 <article class="profile-col">
                     <h3>Where do I came from?</h3>
-                    <p>I came from Indonesia</p>
+                    <p>I came from Indonesia.</p>
                 </article>
                 <article class="profile-col">
                     <h3>What are my hobbies?</h3>
