--- a/prog-exp.html
+++ b/prog-exp.html
@@ -15,7 +15,7 @@
 <body>
     <nav>
         <figure class="main-logo">
-            <img src="resources/main-logo.png" alt="Alessandro Ryo logo">
+            <a href="index.html"><img src="resources/main-logo.png" alt="Alessandro Ryo logo"></a>
         </figure>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -32,20 +32,20 @@
         </section>
     </nav>
     <header class="index-header">
-        <div class="index-main-text-container">
-            <section class="answer-title">
+        <article class="index-main-text-container">
+            <article class="answer-title">
                 <h1>Programming<br>Experience</h1>
-            </section>
+            </article>
             <p>Do I have programming experience? How's the story? Check it out!!!</p>
-        </div>
+        </article>
     </header>
     <main>
-        <section class="answer">
+        <article class="answer">
             <h1>My Motivation</h1>
             <p>When I was in the third grade, I joined the Scratch game development class for 1 or 2 years.
             Furthermore, I learned Pascal Visual Basic in junior high school and joined SQL server course.
             Sometimes, I also search for Python programming language on Youtube to do my hobby.</p>
-        </section>
+            </article>
     </main>
     <footer>
         <article class="footer-content">
