--- a/faq.html
+++ b/faq.html
@@ -16,7 +16,7 @@
 <body class="faq-page">
     <nav>
         <figure class="main-logo">
-            <img src="resources/main-logo.png" alt="Alessandro Ryo logo">
+            <a href="index.html"><img src="resources/main-logo.png" alt="Alessandro Ryo logo"></a>
         </figure>
         <ul>
             <li><a href="index.html">Home</a></li>
