--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is homepage of ">
     <title>Home | Alessandro Ryo</title>
+    <link rel="icon" href="resources/hz-icon.png">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -44,7 +45,7 @@
                 <img src="resources/home-image-1.png" class="index-main-image-container" alt="HBO ICT in HZ University of Applied Sciences Alessandro Ryo">
             </figure>
     </header>
-    <main>
+    <main class="main-background">
         <section class="index">
             <h1>Choosing HBO-ICT</h1>
             <article class="index-text">
