--- a/profile.html
+++ b/profile.html
@@ -52,7 +52,7 @@
             </article>
         </article>
     </header>
-    <main>
+    <main class="main-background">
         <section class="profile">
             <h1>Hello! I'm Ryo</h1>
             <article class="profile-text">
