--- a/prog-exp.html
+++ b/prog-exp.html
@@ -39,7 +39,7 @@
             <p>Do I have programming experience? How's the story? Check it out!!!</p>
         </article>
     </header>
-    <main>
+    <main class="main-background">
         <article class="answer">
             <h1>My Motivation</h1>
             <p>When I was in the third grade, I joined the Scratch game development class for 1 or 2 years.
