--- a/study-choice.html
+++ b/study-choice.html
@@ -38,7 +38,7 @@
             motivate your study choice and after completing the study from my SKC document</p>
         </article>
     </header>
-    <main>
+    <main class="main-background">
         <section class="answer">
             <h1>My Study Choice</h1>
             <section class="answer-row">
