--- a/swot.html
+++ b/swot.html
@@ -38,7 +38,7 @@
             opportunities and threats I expect in my studies.</p>
         </article>
     </header>
-    <main>
+    <main class="main-background">
         <section class="swot">
                 <article class="swot-card">
                     <h1>Strengths</h1>
