--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/42c532e274.js"></script>
 </head>
-<body>
+<body class="main-background">
     <nav>
         <figure class="main-logo">
             <a href="index.html"><img src="resources/main-logo.png" alt="Alessandro Ryo logo"></a>
