--- a/skc-feedback.html
+++ b/skc-feedback.html
@@ -39,7 +39,7 @@
             <p>My first SKC feedback</p>
         </div>
     </header>
-    <main>
+    <main class="main-background">
         <section class="answer">
             <h1>Sorry, this page is not available</h1>
             <p></p>
