--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="This is homepage of ">
     <title>Home | Alessandro Ryo</title>
     <link rel="icon" href="resources/hz-icon.png">
+    <link rel="icon" href="resources/hz-icon.png">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -62,21 +63,27 @@
                     <p>Choosing HBO-ICT is my life choice and my passion is in this major.
                     I also had the opportunity to be a head of IT division in the student council,
                     where I created a website for the student council, became a social media manager,
-                    and had several other tasks related to the ICT world.
-                    </p>
+                    and had several other tasks related to the ICT world.</p>
+                    <figure class="opinion-image">
+                        <img src="resources/passion-image.png">
+                    </figure>
                 </article>
                 <article class="index-col">
                     <h3>Successful Figure</h3>
                     <p>I see many examples of successful figures because of their expertise in the ICT world.
-                    For examples, Bill Gates, Mark Zuckerberg, Larry Page, and many more.
-                    From there I learned a lot about the IT world and its struggles.
-                    </p>
+                    For examples, Bill Gates, Steve Jobs, Mark Zuckerberg, Larry Page, and many more.
+                    From there I learned a lot about the IT world and its struggles.</p>
+                    <figure class="opinion-image">
+                        <img src="resources/figure-image.png">
+                    </figure>
                 </article>
                 <article class="index-col">
                     <h3>Parent Experience</h3>
                     <p>My father have worked in IT for more than 20 years and I am often told about my father day-to-day experiences working in IT.
-                    I learned a lot of hardships at work as well as the joys that come with it.
-                    </p>
+                    I learned a lot of hardships at work as well as the joys that come with it.</p>
+                    <figure class="opinion-image">
+                        <img src="resources/parents-image.png">
+                    </figure>
                 </article>
             </section>
         </section>
