--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     where I created a website for the student council, became a social media manager,
                     and had several other tasks related to the ICT world.</p>
                     <figure class="opinion-image">
-                        <img src="resources/passion-image.png">
+                        <img src="resources/passion-image.png" alt="HBO-ICT Passion of Alessandro Ryo">
                     </figure>
                 </article>
                 <article class="index-col">
@@ -74,7 +74,7 @@
                     For examples, Bill Gates, Steve Jobs, Mark Zuckerberg, Larry Page, and many more.
                     From there I learned a lot about the IT world and its struggles.</p>
                     <figure class="opinion-image">
-                        <img src="resources/figure-image.png">
+                        <img src="resources/figure-image.png" alt="HBO-ICT Figure Person of Alessandro Ryo">
                     </figure>
                 </article>
                 <article class="index-col">
@@ -82,7 +82,7 @@
                     <p>My father have worked in IT for more than 20 years and I am often told about my father day-to-day experiences working in IT.
                     I learned a lot of hardships at work as well as the joys that come with it.</p>
                     <figure class="opinion-image">
-                        <img src="resources/parents-image.png">
+                        <img src="resources/parents-image.png" alt="Parents Experience of Alessandro Ryo">
                     </figure>
                 </article>
             </section>
