--- a/profile.html
+++ b/profile.html
@@ -81,7 +81,7 @@
         <article class="edu-title">
             <h2>&#8226 Education &#8226</h2>
         </article>
-        <article class="edu-container">
+        <section class="edu-container">
             <article class="edu-timeline">
                 <ul>
                     <li>
@@ -100,11 +100,11 @@
                     </li>
                 </ul>
             </article>
-        </article>
-    <article class="org-title">
+        </section>
+        <article class="org-title">
         <h2>&#8226 Organization &#8226</h2>
-    </article>
-    <section class="org-container">
+        </article>
+        <section class="org-container">
         <article class="org-timeline">
             <ul>
                 <li>
@@ -123,7 +123,59 @@
                 </li>
             </ul>
         </article>
-    </section>
+        </section>
+        <article class="skill-title">
+            <h2>&#8226 Skill &#8226</h2>
+        </article>
+        <section class="skills-container">
+            <section class="skill">
+              <article class="skill-name">Time Management</article>
+              <section class="skill-bar"></section>
+              <article class="timemanagement skill-fill">
+                <span class="skill-percent">80%</span>
+              </article>
+            </section>
+            <section class="skill">
+              <article class="skill-name">Creative Thinking</article>
+              <section class="skill-bar"></section>
+              <article class="creativethinking skill-fill">
+                <span class="skill-percent">80%</span>
+              </article>
+            </section>
+            <section class="skill">
+              <article class="skill-name">Communication</article>
+              <section class="skill-bar"></section>
+              <article class="communication skill-fill">
+                <span class="skill-percent">70%</span>
+              </article>
+            </section>
+            <section class="skill">
+                <article class="skill-name">Teamwork</article>
+                <section class="skill-bar"></section>
+                <article class="teamwork skill-fill">
+                  <span class="skill-percent">75%</span>
+                </article>
+              </section>
+              <section class="skill">
+                <article class="skill-name">Leadership</article>
+                <section class="skill-bar"></section>
+                <article class="leadership skill-fill">
+                  <span class="skill-percent">80%</span>
+                </article>
+              </section>
+        </section>
+        <article class="collage-title">
+            <h2>&#8226 Me and My Friends &#8226</h2>
+        </article>
+        <figure class="collage-container">
+            <img src="resources/photo-collage-1.jpg">
+            <img src="resources/photo-collage-2.jpg">
+            <img src="resources/photo-collage-3.jpg">
+            <img src="resources/photo-collage-4.jpg">
+            <img src="resources/photo-collage-5.jpg">
+            <img src="resources/photo-collage-6.jpg">
+            <img src="resources/photo-collage-7.jpg">
+        </figure>
     </main>
     <footer>
         <article class="footer-content">
