--- a/profile.html
+++ b/profile.html
@@ -175,6 +175,7 @@
             <img src="resources/photo-collage-5.jpg">
             <img src="resources/photo-collage-6.jpg">
             <img src="resources/photo-collage-7.jpg">
+            <img src="resources/photo-collage-8.jpg">
         </figure>
     </main>
     <footer>
