--- a/faq.html
+++ b/faq.html
@@ -43,7 +43,7 @@
                             <i class="icon ion-md-remove"></i>
                         </a>
                         <article class="faq-answer">
-                            <p>By Simply connecting to one of the printers at school.</p>
+                            <p>We just need to connect our laptop to one of the printers at school.</p>
                         </article>
                     </article>
                     <article class="faq-accordion-item" id="question2">
@@ -53,7 +53,7 @@
                             <i class="icon ion-md-remove"></i>
                         </a>
                         <article class="faq-answer">
-                            <p>Use the same printer, scan your paper and it should added on yourpc if you do it right.</p>
+                            <p>We can use one of the printers with scanner. Then, scan your paper correctly and it will added to your laptop</p>
                         </article>
                     </article>
                     <article class="faq-accordion-item" id="question3">
@@ -63,8 +63,7 @@
                             <i class="icon ion-md-remove"></i>
                         </a>
                         <article class="faq-answer">
-                            <p>Contact the teachers/helpdesk at school and stay home. Follow the lessons on stream to compensate for that unusual sickness.
-                            </p>
+                            <p>We need to contact our teacher or helpdesk at school. We have to stay at home and join the online class to compensate for unusual sickness.</p>
                         </article>
                     </article>
                     <article class="faq-accordion-item" id="question4">
@@ -74,7 +73,7 @@
                             <i class="icon ion-md-remove"></i>
                         </a>
                         <article class="faq-answer">
-                            <p>You can book a room on the HZ page after logging in by pressing the Selfservice Portal, it should be easy from thereon out.</p>
+                            <p>Login via Selfservice Portal and then we need to book a room on the HZ page. We need to follow the instructions</p>
                         </article>
                     </article>
                     <article class="faq-accordion-item" id="question5">
@@ -84,7 +83,7 @@
                             <i class="icon ion-md-remove"></i>
                         </a>
                         <article class="faq-answer">
-                            <p>You must park your car "across the road", at the parking lot of the former PEZM.</p>
+                            <p>We must park our car at the parking lot of the former PEZM.</p>
                         </article>
                     </article>
                 </section>
