--- a/dashboard.html
+++ b/dashboard.html
@@ -18,10 +18,11 @@
         </figure>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="profile.html">Profile</a></li>
+            <li><a href="profile.html">About Me</a></li>
             <li><a href="dashboard.html">Dashboard</a></li>
             <li><a href="faq.html">FAQ</a></li>
             <li><a href="blog.html">Blog</a></li>
+            <li><a href="others.html">Others</a></li>
         </ul>
         <section class="menu-toggle">
             <input type="checkbox">
