--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
         </figure>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="profile.html">Profile</a></li>
+            <li><a href="profile.html">About Me</a></li>
             <li><a href="dashboard.html">Dashboard</a></li>
             <li><a href="faq.html">FAQ</a></li>
             <li><a href="blog.html">Blog</a></li>
+            <li><a href="others.html">Others</a></li>
         </ul>
         <section class="menu-toggle">
           <input type="checkbox">
@@ -40,8 +41,10 @@
                 <a href="profile.html" class="user-button-text">Look at my profile</a>
                 <a href="profile.html" class="user-icon"><i class="fa fa-user"></i> Profile</a>
             </article>
-            <figure> 
+            <figure>
+                <a href="https://hz.nl/en/study-programmes/it">
                 <img src="resources/home-image-1.png" class="index-main-image-container" alt="HBO ICT in HZ University of Applied Sciences Alessandro Ryo">
+                </a>
             </figure>
     </header>
     <main class="main-background">
