--- a/others.html
+++ b/others.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SKC First Feedback | Alessandro Ryo</title>
+    <title>FAQ | Alessandro Ryo</title>
     <link rel="icon" href="resources/hz-icon.png">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Poppins:wght@400;700&family=Roboto:wght@500&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css">
     <script src="https://kit.fontawesome.com/42c532e274.js"></script>
 </head>
-<body>
+<body class="faq-page">
     <nav>
         <figure class="main-logo">
             <a href="index.html"><img src="resources/main-logo.png" alt="Alessandro Ryo logo"></a>
@@ -31,20 +32,22 @@
             <span></span>
         </section>
     </nav>
-    <header class="index-header">
-        <div class="index-main-text-container">
-            <section class="answer-title">
-                <h1>SKC<br>First Feedback</h1>
+    <main>
+        <section class="others">
+            <h1>Others</h1>
+            <h2>Click text below to read more</h2>
+            <section class="others-container">
+            <ul>
+                <li><a href="https://hz.nl/over-de-hz/regelingen-documenten-1/onderwijs-en-examenregelingen">The HZ HBO-ICT Course and Examination Regulations (CER)</a></li>
+                <li><a href="https://hz.nl/uploads/documents/Regelingen/OERS/2021-2022/11.-Uitvoeringsregeling-OER-ICT-Voltijd-2021-2022.pdf">The Implementation Regulations (IR) of the HBO-ICT programme</a></li>
+                <li><a href="https://learn.hz.nl/my/">The HZ Learn environment</a></li>
+                <li><a href="https://teams.microsoft.com/l/team/19%3a2e2afa0286b04932be16cb8ad2d9d2c0%40thread.skype/conversations?groupId=95bddebc-a340-4d88-81fc-b80e0bfc70c3&tenantId=4c16deb3-342d-4fca-bcd5-b1429308034c">The Teams environment of the study programme</a></li>
+                <li><a href="https://apps.hz.nl/angular/studievoortgang/studiestatus">The page in MyHZ with my study progress</a></li>
+                <li><a href="https://github.com/alessandroryo/showcase-website">The Github environment of the study programme</a></li>
+            </ul>
             </section>
-            <p>My first SKC feedback</p>
-        </div>
-    </header>
-    <main class="main-background">
-        <section class="answer">
-            <h1>Sorry, this page is not available</h1>
-            <p></p>
         </section>
-    </main>
+    </main>    
     <footer>
         <article class="footer-content">
             <h3>Alessandro Ryo</h3>
@@ -60,6 +63,6 @@
             <p>copyright &copy; 2021 Ryo. designed by <span>Ryo</span></p>
         </article>
     </footer> 
-    <script src="js/script.js"></script>
-    </body>
+    <script src="js/script.js"></script>   
+</body>
 </html>
