--- a/ict-fow.html
+++ b/ict-fow.html
@@ -31,8 +31,8 @@
             <span></span>
         </section>
     </nav>
-    <header class="index-header">
-        <article class="index-main-text-container">
+    <header class="ict-fow-header">
+        <article class="ict-fow-main-text-container">
             <h1>ICT<br>Field of Work</h1>
             <p>How is the world of technology now? What types of jobs are there?</p>
         </article>
