--- a/prog-exp.html
+++ b/prog-exp.html
@@ -31,11 +31,9 @@
             <span></span>
         </section>
     </nav>
-    <header class="index-header">
-        <article class="index-main-text-container">
-            <article class="answer-title">
-                <h1>Programming<br>Experience</h1>
-            </article>
+    <header class="prog-exp-header">
+        <article class="prog-exp-main-text-container">
+            <h1>Programming<br>Experience</h1>
             <p>Do I have programming experience? How's the story? Check it out!!!</p>
         </article>
     </header>
