--- a/study-choice.html
+++ b/study-choice.html
@@ -31,8 +31,8 @@
             <span></span>
         </section>
     </nav>
-    <header class="index-header">
-        <article class="index-main-text-container">
+    <header class="study-choice-header">
+        <article class="study-choice-main-text-container">
             <h1>Study<br>Choice</h1>
             <p>A combination of the sections study choice activities,
             motivate your study choice and after completing the study from my SKC document</p>
