--- a/swot.html
+++ b/swot.html
@@ -31,8 +31,8 @@
             <span></span>
         </section>
     </nav>
-    <header class="index-header">
-        <article class="index-main-text-container">
+    <header class="swot-header">
+        <article class="swot-main-text-container">
             <h1>SWOT<br>Analysis</h1>
             <p>By making a SWOT-analysis, I analyze my personal strengths and weaknesses and make an inventory of the
             opportunities and threats I expect in my studies.</p>
