--- a/others.html
+++ b/others.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css">
     <script src="https://kit.fontawesome.com/42c532e274.js"></script>
 </head>
-<body class="faq-page">
+<body class="others-page">
     <nav>
         <figure class="main-logo">
             <a href="index.html"><img src="resources/main-logo.png" alt="Alessandro Ryo logo"></a>
